<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/statementFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/statement"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>
    <item
        android:id="@+id/scanFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/scanner"/>
</menu>